<resources>
    <string name="app_name">OOEC_mobile</string>

    <!-- validation Errors -->
    <string name="err_name">The name field is required.</string>
    <string name="err_email">The email must be a valid email address.</string>
    <string name="err_password">The password must be at least 6 characters.</string>
    <string name="ViewProTeams">View pro teams</string>
    <string name="watch_stream">Watch stream</string>
    <string name="add_tournament">Add Tournament</string>
    <string name="fetch_tournament">Fetch tournament</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="identity_id">Identity Id</string>
    <string name="place">Place</string>
    <string name="type">Type</string>
    <string name="prizepool">PrizePool</string>
    <string name="date_start">Date Start</string>
    <string name="date_end">Date End</string>
    <string name="description">Description</string>
    <string name="game">Game</string>
    <string name="save">Save</string>
    <string name="delete_tournament">Delete Tournament</string>
    <string name="show_lobbies">Show lobbies</string>
    <string name="show_teams">Show teams</string>
    <string name="add_lobby">Add Lobby</string>
    <string name="fetch_lobby">Fetch Lobby</string>
    <string name="score_winner">Score Winner</string>
    <string name="score_loser">Score Loser</string>
    <string name="winner">Winner</string>
    <string name="datestart">DateStart</string>
    <string name="tournament_id">Tournament Id</string>
    <string name="radiant_team_name">Radiant Team Name</string>
    <string name="dire_team_name">Dire Team Name</string>
    <string name="delete_lobby">Delete Lobby</string>
    <string name="add_team">Add Team</string>
    <string name="fetch_team">Fetch Team</string>
    <string name="team_name">Team Name</string>
    <string name="tag">Tag</string>
    <string name="number_of_players">Number of players</string>
    <string name="delete_team">Delete Team</string>
    <string name="show_players">Show players</string>
    <string name="add_player">Add Player</string>
    <string name="fetch_player">Fetch Player</string>
    <string name="player_name">Player Name</string>
    <string name="position">Position</string>
    <string name="age">Age</string>
    <string name="team_id">Team id</string>
    <string name="delete_player">Delete Player</string>
    <string name="Identity_id">Identity Id: %s</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="not_yet_registered">Not Yet Registered</string>
    <string name="register">Register</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="location">Location</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="tournamentname">Tournament name: %s</string>
    <string name="pplace">Place: %s</string>
    <string name="ttype">Type: %s</string>
    <string name="prizePPool">Prize Pool: %d</string>
    <string name="ddatestart">Date Start: %s</string>
    <string name="ddateend">Date End: %s</string>
    <string name="ddescription">Description: %s</string>
    <string name="ggame">Game: %s</string>
    <string name="dddatestart">Date Start: %s</string>
    <string name="sscorewinner">Score Winner: %d</string>
    <string name="sscoreloser">Score Loser: %d</string>
    <string name="wwiner">Winner: %s</string>
    <string name="ttournamentId">Tournament Id: %d</string>
    <string name="rradiantteamaname">Radiant Team Name: %s</string>
    <string name="ddireteamname">Dire Team Name: %s</string>
    <string name="tteamname">Team Name: %s</string>
    <string name="ttag">Tag: %s</string>
    <string name="nnumberofplayers">Number of players: %d</string>
    <string name="pplayername">Player Name: %s</string>
    <string name="pposition">Position: %s</string>
    <string name="aage">Age: %d</string>
    <string name="tteamid">Team Id: %d</string>
    <string name="rating">Rating: %s</string>
    <string name="wwwins">Wins: %d</string>
    <string name="llosses">Losses: %d</string>
    <string name="llastmatchtime">Last match time: %s</string>
    <string name="nnname">Name: %s</string>
    <string name="tttag">Tag: %s</string>
    <string name="ppplayername">Player Name: %s</string>
    <string name="gamesplayed">Games Played: %s</string>
    <string name="WWins">Wins: %s</string>
    <string name="iscurrentteammember">Is current team member: %s</string>
    <string name="view_pro_matches">View pro matches</string>
    <string name="TTeam">Teams</string>
    <string name="TTTournaments">Tournaments</string>
    <string name="Lobbies">Lobbies</string>
    <string name="PPPlayers">Players</string>
    <string name="logout">Logout</string>
</resources>