<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TournamentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txtUId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ID"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtUId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/txtUTournamentname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tournament_name"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtTournamentname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txtUIdentityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identity_id"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtIdentityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txtUPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txtUType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txtUPrizePool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prizepool"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtPrizePool"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txtUDateStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_start"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtDateStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtUDateEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/date_end"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtDateEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txtUDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtUGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/game"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="#32CD32"
            android:textColor="#ffffff"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_tournament"
            android:background="#FF0000"
            android:textColor="#ffffff"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:id="@+id/btnLobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_lobbies"
            android:background="#32CD32"
            android:textColor="#ffffff"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:id="@+id/btnTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_teams"
            android:background="#32CD32"
            android:textColor="#ffffff"
            />
    </LinearLayout>

</ScrollView>