<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:background="#BDB76B"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            />
        <Button
            android:id="@+id/btnProTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ViewProTeams"
            android:background="#BDB76B"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/btnStream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watch_stream"
            android:background="#BDB76B"
            android:textColor="#ffffff"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/btnAddTournament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_tournament"
            android:background="#BA55D3"
            android:textColor="#ffffff"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:id="@+id/btnGetTournamentsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fetch_tournament"
            android:background="#32CD32"
            android:textColor="#ffffff"
            android:layout_marginBottom="5dp"
            />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>